--- a/.github/workflows/Matrics.yml
+++ b/.github/workflows/Matrics.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ ecbc968488a2203aff50a2ae9c3159777d00887a }}
+          token: ${{ secrets.METRICS_TOKEN }}
           # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
           committer_token: ${{ secrets.GITHUB_TOKEN }}
 
