--- a/.github/workflows/Matrics.yml
+++ b/.github/workflows/Matrics.yml
@@ -22,3 +22,8 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Amsterdam
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_lines: yes
