--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -1,4 +1,5 @@
 # Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
+#test
 name: Metrics
 on:
   # Schedule updates (each hour)
