--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -36,3 +36,15 @@ jobs:
           plugin_wakatime_days: 7                                   # Display last week stats
           plugin_wakatime_sections: time, projects, projects-graphs # Display time and projects sections, along with projects graphs
           plugin_wakatime_limit: 4                                  # Show 4 entries per graph
+          #new plugins
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_code_days: 3
+          plugin_code_lines: 12
+          plugin_code_load: 400
+          plugin_code_visibility: public
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_types: commit
