--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -38,9 +38,9 @@ jobs:
           plugin_wakatime_limit: 4                                  # Show 4 entries per graph
           #new plugins
           plugin_achievements: yes
-          plugin_achievements_display: detailed
+          plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: X
           plugin_code_days: 3
           plugin_code_lines: 12
           plugin_code_load: 400
