--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -40,7 +40,7 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: X
+          plugin_achievements_threshold: C
           plugin_code_days: 3
           plugin_code_lines: 12
           plugin_code_load: 400
