try something new

--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -24,6 +24,8 @@ jobs:
           user: LFGaming
           template: classic
           base: header, activity, community, repositories, metadata
+          repositories: 50
+          repositories_affiliations: owner, collaborator
           config_timezone: Europe/Amsterdam
           plugin_introduction: yes
           plugin_introduction_title: yes
@@ -60,4 +62,5 @@ jobs:
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
+
 
