--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -16,7 +16,8 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@master
+      # - uses: lowlighter/metrics@master
+      - uses: stalomeow/metrics@projects-v2
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
@@ -62,5 +63,6 @@ jobs:
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
+
 
 
