--- a/.github/workflows/Metrics.yml
+++ b/.github/workflows/Metrics.yml
@@ -16,8 +16,8 @@ jobs:
     permissions:
       contents: write
     steps:
-      # - uses: lowlighter/metrics@master
-      - uses: stalomeow/metrics@projects-v2
+      - uses: lowlighter/metrics@master
+      # - uses: stalomeow/metrics@projects-v2
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
@@ -63,6 +63,7 @@ jobs:
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
+
 
 
 
